--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ h3 {
     height: 30px;
     margin: 5px;
     margin-top: 15px;
+    padding: 8px;
+    animation: fadeIn 6s;
+}
+
+#restartgame {
+    animation: fadeIn 6s;
 }
 
 #rock {
@@ -88,9 +94,17 @@ h3 {
 
 #endresult {
     margin: 10px;
+    font-size: 30px;
+    font-weight: bold;
+    animation: fadeIn 4s;
 }
 
 #container {
     margin: 10px;
+    font-size: 35px;
+    animation: fadeIn 3s;
 }
-
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
